--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/textView"
-        android:orientation="vertical"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="432dp"
+            android:layout_height="435dp"
             android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
@@ -41,10 +38,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
+                    android:layout_marginTop="21dp"
                     android:text="@string/recent_stickers"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginTop="21dp"
                     app:layout_constraintTop_toBottomOf="@+id/emergentStickers" />
 
                 <Button
@@ -52,12 +49,12 @@
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="76dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="161dp"
                     android:text="@string/emergent_stickers"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="161dp"
                     app:layout_constraintRight_toLeftOf="@+id/emergentNumber"
-                    android:layout_marginRight="8dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
@@ -65,7 +62,7 @@
         <LinearLayout
             android:id="@+id/NavigationController"
             android:layout_width="match_parent"
-            android:layout_height="117dp"
+            android:layout_height="100dp"
             android:orientation="horizontal">
 
             <Button
