--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -3,25 +3,43 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/category_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Key"
-        android:id="@+id/key"
-        android:textSize="20sp"
-        android:padding="4dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="Value"
-        android:id="@+id/value"
-        android:padding="4dp"
-        android:layout_below="@+id/key"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp" />
+        android:layout_below="@+id/create"
+        android:padding="4dp"
+        android:text="Key"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/create"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="+"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/category_name"
+        android:layout_below="@+id/create" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_toLeftOf="@+id/button3"
+        android:layout_alignBottom="@+id/category_name"
+        android:layout_below="@+id/create" />
+
 </RelativeLayout>
