Category list finished part1

--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -19,14 +19,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal">
+            android:layout_gravity="right"
+            android:gravity="right"
+            android:orientation="vertical">
 
             <Button
-                android:id="@+id/button2"
-                android:layout_width="50dp"
+                android:id="@+id/setting"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.22"
-                android:text="Button" />
+                android:text="編輯" />
         </LinearLayout>
 
         <LinearLayout
