--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -5,7 +5,7 @@
     <TextView
         android:id="@+id/category_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/create"
@@ -17,11 +17,11 @@
     <Button
         android:id="@+id/create"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="+"
-        android:textSize="24sp" />
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/edit"
