--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -5,19 +5,19 @@
     <TextView
         android:id="@+id/category_name"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/create"
+        android:layout_height="75dp"
         android:padding="4dp"
         android:text="Key"
         android:textAlignment="center"
-        android:textSize="24sp" />
+        android:textSize="40sp"
+        android:layout_below="@+id/create"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/create"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="+"
@@ -26,22 +26,32 @@
     <Button
         android:id="@+id/edit"
         android:layout_width="80dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignBottom="@+id/category_name"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/create"
         android:text="編輯"
         android:visibility="visible" />
 
     <Button
         android:id="@+id/delete"
         android:layout_width="80dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignBottom="@+id/category_name"
-        android:layout_below="@+id/create"
         android:layout_toLeftOf="@+id/edit"
         android:text="刪除"
         android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/category_description"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/category_name"
+        android:inputType="textMultiLine"
+        android:textSize="20sp" />
 
 </RelativeLayout>
