--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -10,12 +10,12 @@
         android:text="Key"
         android:textAlignment="center"
         android:textSize="40sp"
-        android:layout_below="@+id/create"
+        android:layout_below="@+id/create_category"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/create"
+        android:id="@+id/create_category"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
@@ -24,7 +24,7 @@
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/edit"
+        android:id="@+id/edit_category"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_alignBottom="@+id/category_name"
@@ -34,11 +34,11 @@
         android:visibility="visible" />
 
     <Button
-        android:id="@+id/delete"
+        android:id="@+id/delete_category"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_alignBottom="@+id/category_name"
-        android:layout_toLeftOf="@+id/edit"
+        android:layout_toLeftOf="@+id/edit_category"
         android:text="刪除"
         android:visibility="visible" />
 
