--- a/app/src/main/res/layout/activity_sticker_list.xml
+++ b/app/src/main/res/layout/activity_sticker_list.xml
@@ -47,7 +47,7 @@
             android:orientation="vertical">
 
             <ListView
-                android:id="@+id/listView"
+                android:id="@+id/sticker_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
