--- a/app/src/main/res/layout/sticker_item.xml
+++ b/app/src/main/res/layout/sticker_item.xml
@@ -4,6 +4,26 @@
     android:layout_height="match_parent">
 
     <Button
+        android:id="@+id/delete_sticker"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/sticker_deadline"
+        android:layout_toLeftOf="@+id/edit_sticker"
+        android:layout_toStartOf="@+id/edit_sticker"
+        android:text="刪除"
+        android:visibility="visible" />
+
+    <Button
+        android:id="@+id/edit_sticker"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/sticker_deadline"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:text="編輯"
+        android:visibility="visible" />
+
+    <Button
         android:id="@+id/create_sticker"
         android:layout_width="match_parent"
         android:layout_height="45dp"
