--- a/app/src/main/res/layout/activity_sticker.xml
+++ b/app/src/main/res/layout/activity_sticker.xml
@@ -7,6 +7,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="Category:"
+            android:textSize="30sp" />
+
+        <Spinner
+            android:id="@+id/categoryList"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.38" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="58dp"
         android:orientation="horizontal">
 
