--- a/app/src/main/res/layout/activity_sticker.xml
+++ b/app/src/main/res/layout/activity_sticker.xml
@@ -124,7 +124,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:clickable="true"
-            android:text="1" />
+            android:gravity="center_horizontal"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags1"
@@ -132,49 +133,62 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:clickable="true"
-            android:text="2" />
+            android:gravity="center_horizontal"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="true" />
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:textSize="45sp"/>
 
         <TextView
             android:id="@+id/stickerTags3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="true" />
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:textSize="45sp"/>
 
         <TextView
             android:id="@+id/stickerTags4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="true" />
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:textSize="45sp"/>
 
         <TextView
             android:id="@+id/stickerTags5"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="true" />
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:textSize="45sp"/>
 
         <TextView
             android:id="@+id/stickerTags6"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="true" />
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:textSize="45sp"/>
 
         <TextView
             android:id="@+id/stickerTags7"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:clickable="true" />
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:textSize="45sp"/>
     </TableRow>
 
     <CheckBox
