--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -7,28 +7,41 @@
     android:descendantFocusability="blocksDescendants"
     android:weightSum="1">
 
+    <Button
+        android:id="@+id/removeTag"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_weight="0.00"
+        android:text="取消Tag" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_weight="0.00"
         android:orientation="horizontal"
-        tools:ignore="MissingPrefix"
-        android:weightSum="1">
+        android:weightSum="1"
+        tools:ignore="MissingPrefix">
 
         <CheckBox
             android:id="@+id/isChosen"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:checked="true"
             android:textAlignment="center" />
 
-        <EditText
+        <TextView
             android:id="@+id/tagTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:textSize="30sp" />
+
+        <ImageButton
+            android:id="@+id/editTag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:src="@android:drawable/ic_menu_edit" />
 
     </LinearLayout>
 
