--- a/app/src/main/res/layout/activity_sticker.xml
+++ b/app/src/main/res/layout/activity_sticker.xml
@@ -125,6 +125,7 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
+            android:tag="0"
             android:textSize="45sp" />
 
         <TextView
@@ -134,6 +135,7 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
+            android:tag="1"
             android:textSize="45sp" />
 
         <TextView
@@ -143,7 +145,8 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
-            android:textSize="45sp"/>
+            android:tag="2"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags3"
@@ -152,7 +155,8 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
-            android:textSize="45sp"/>
+            android:tag="3"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags4"
@@ -161,7 +165,8 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
-            android:textSize="45sp"/>
+            android:tag="4"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags5"
@@ -170,7 +175,8 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
-            android:textSize="45sp"/>
+            android:tag="5"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags6"
@@ -179,7 +185,8 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
-            android:textSize="45sp"/>
+            android:tag="6"
+            android:textSize="45sp" />
 
         <TextView
             android:id="@+id/stickerTags7"
@@ -188,7 +195,8 @@
             android:layout_weight="1"
             android:clickable="true"
             android:gravity="center_horizontal"
-            android:textSize="45sp"/>
+            android:tag="7"
+            android:textSize="45sp" />
     </TableRow>
 
     <CheckBox
