--- a/app/src/main/res/layout/activity_sticker.xml
+++ b/app/src/main/res/layout/activity_sticker.xml
@@ -111,7 +111,15 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="20sp" />
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Tag:"
+        android:textSize="30sp" />
 
     <TableRow
         android:id="@+id/stickerTagRow"
