--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -2,6 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <CheckBoxPreference
+        android:id="@+id/test"
         android:defaultValue="true"
         android:key="@string/remind"
         android:title="是否要提醒" />
@@ -11,4 +12,5 @@
         android:entryValues="@array/calendar_options"
         android:key="@string/calendars"
         android:title="選擇曆法" />
+
 </PreferenceScreen>
