--- a/app/src/main/res/layout/activity_sticker.xml
+++ b/app/src/main/res/layout/activity_sticker.xml
@@ -75,7 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="TextView"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -127,7 +128,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Tag:"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:visibility="gone" />
 
     <TableRow
         android:id="@+id/stickerTagRow"
